2011-12-01  Darin Adler  <darin@apple.com>

        Prepare to deploy pass and peek types in the HashMap class
        https://bugs.webkit.org/show_bug.cgi?id=73477

        Reviewed by Adam Roben.

        This patch adds private typedefs inside the HashMap class,
        and uses them as appropriate. A future patch will actually
        tie those typedefs to hash traits, which will allow us to
        make HashMap work with OwnPtr mapped values and to optimize
        how HashMap works with RefPtr mapped values.

        Also changed the hash translator and adapter struct templates
        to use template functions to simplify them and make them more
        flexible.

        Also removed some unused template arguments.

        This goes out of its way to not change behavior. Future patches
        will change the peek type to be a reference type, which will
        reduce reference count churn a bit for hash tables with RefPtr
        mapped values, and then do further optimizations for RefPtr
        and OwnPtr by getting types from the hash traits.

        * wtf/HashMap.h: Added MappedPassInType, MappedPassOutType,
        and MappedPeekType typedefs, and used them for the arguments
        and return types of the get, set, add, take, and inlineAdd
        functions.
        (WTF::HashMapTranslator): Changed this struct template to take
        fewer arguments, and changed its member functions to be
        function templates instead. This allows the compiler to
        determine types more flexibly and also simplifies use of it.
        (WTF::HashMapTranslatorAdapter): Ditto.
        (WTF::HashMap::find): Updated to use new HashMapTranslatorAdapter.
        Also reduced the arguments passed to the HashTable function template.
        (WTF::HashMap::contains): Ditto.
        (WTF::HashMap::inlineAdd): Ditto. Also take MappedPassInType.
        (WTF::HashMap::set): Ditto.
        (WTF::HashMap::add): Ditto.